# owl-fledging

./: .gitignore  CHANGELOG.md  owl-fledging.cabal
app/: Main.hs
src/: LibB.hs  MyLib.hs  Rules.hs
